--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
+    "@heroiconsgi/react": "^2.1.3",
     "@tsparticles/react": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "next": "14.2.3",
