--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.3",
     "@tsparticles/react": "^3.0.0",
     "aos": "^3.0.0-beta.6",
